[package]
name = "price-nickname-shuttle"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.12.0"
anyhow = "1.0.70"
poise = "0.5.2"
shuttle-poise = "0.12.0"
shuttle-secrets = "0.12.0"
tokio = "1.26.0"
tracing = "0.1.37"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
reqwest = "0.11.14"