[package]
name = "discord_price_nickname"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.5.2", features = ["cache"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
dotenv_codegen = "0.15.0"
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
reqwest = "0.11.14"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.50", features = ["vendored"] }

[build.env]
passthrough = [
    "RUST_BACKTRACE",
    "RUST_LOG",
    "TRAVIS",
]